# PH13FEI_ws_nav_ws

./: nav-simple.txt
src/husky_clearpath/husky_navigation/config/: costmap_common.yaml  costmap_common_pc.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  global_costmap_params.yaml  planner.bk.yaml  planner.yaml  planner.yaml.save  planner_TEB.yaml  planner_pc.yaml  planner_pc_Traj.yaml  planner_pc_wipDWA.yaml
src/husky_isa4_nav/: CMakeLists.txt  package.xml
src/husky_isa4_nav/launch/: amcl_demo.launch  amcl_demo_Hall.launch  amcl_demo_Hall_pc.launch  amcl_demo_Hall_pc_Traj.launch  amcl_demo_MarlMai2023.launch  amcl_demo_Out.launch  amcl_demo_Out_pc.launch  amcl_demo_pc.launch  gmapping_demo.launch  gmapping_demo_MarlMai2023.launch  gmapping_demo_pc.launch  lidar_pointcloud_to_laserscan.launch  move_base_mapless_demo.launch  move_base_mapless_demo_pc.launch  ouster_and_scan.launch  ouster_and_viz.launch  run_navigation_stack.launch  rviz_husky.launch
src/husky_isa4_nav/maps/: 080_garden_v0.pgm  080_garden_v0.yaml  080_garden_v1.pgm  080_garden_v1.yaml  24-03-2022_map.yaml  29Nov1404Tmp6.pgm  29Nov1404Tmp6.yaml  29Nov1404Tmp6_edited.pgm  29Nov1404Tmp6_edited.yaml  29Nov1404Tmp6_edited0.pgm  29Nov1404Tmp6_edited0.yaml  Marl_map.yaml  cornerhall2_map.yaml  cornerhall_map.yaml  hall220423_lessRes_map.pgm  hall220423_lessRes_map.yaml  hall220423_map.yaml  hall25Nov2025.pgm  hall25Nov2025.yaml  mymap.pgm  sandPark18Dez0.yaml  sandPark18Dez1.yaml  sandPark18Dez10.yaml  sandPark18Dez11.yaml  sandPark18Dez12.yaml  sandPark18Dez13.yaml  sandPark18Dez14.yaml  sandPark18Dez15.yaml  sandPark18Dez16.yaml  sandPark18Dez17.yaml  sandPark18Dez18.yaml  sandPark18Dez2.yaml  sandPark18Dez3.yaml  sandPark18Dez4.yaml  sandPark18Dez5.yaml  sandPark18Dez6.yaml  sandPark18Dez7.yaml  sandPark18Dez8.yaml  sandPark18Dez9.yaml
src/husky_isa4_nav/maps/23-05-22-marl/: map.pgm  map.yaml
src/husky_isa4_nav/src/: estop_mux.cpp  img_conv.py  publish_lidar_marker.py
src/husky_isa4_nav/src/arxiv/: estop.cpp  publish_marker_ORIGPyt3.py
src/navigation_stack/costmap_2d/: CMakeLists.txt
src/navigation_stack/move_base/: CMakeLists.txt  package.xml
(+35 files in other folders)
