<?xml version="1.0"?>
<package>
  <name>husky_isa4_nav</name>
  <version>0.0.1</version>
  <description>Autonomous mapping and navigation demos for the Husky in ISA4 project</description>

  <author email="gomezro@informatik.uni-freiburg.de">Adriana Gomez</author>
  <maintainer email="gomezro@informatik.uni-freiburg.de">Adriana Gomez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

<!-- For extra Emergency stop action -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

<run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
